--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "uuidv4": "^6.2.11"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
