--- a/package.json
+++ b/package.json
@@ -20,23 +20,27 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
-    "uuidv4": "^6.2.11"
+    "papaparse": "^5.3.2",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "uuidv4": "^6.2.11",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
+    "@types/papaparse": "^5.3.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
